--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -11,6 +11,8 @@
     <link href="/styles/overons.css" rel="stylesheet" />
     <link href="/styles/contact.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="..." crossorigin="anonymous" />
+    <script src="/scripts/script.js" defer></script>
+    <script src="/scripts/pagination.js" defer></script>
     <title>De Buurtcampus</title>
   </head>
   <body>
