--- a/views/overzicht.ejs
+++ b/views/overzicht.ejs
@@ -11,7 +11,7 @@
     <% // Sorteren van advertenties op oud naar nieuw (Hoogste ID tot laagste ID)
     services.sort((a, b) => b.id - a.id); services.forEach(function(service) {
     %>
-    <li class="overzicht__service">
+    <li class="overzicht__service fade-in">
       <div class="loading"></div>
       <a href="/service/<%= service.slug %>">
         <form action="/like" method="POST" class="overzicht__like--form">
