--- a/views/overzicht.ejs
+++ b/views/overzicht.ejs
@@ -3,14 +3,20 @@
 
 <main>
 
-  <div class="overzicht__button--container">
-    <a href="/service-aanmelden" class="overzicht__button">Zelf iets plaatsen...</a>
+  <div class="overzicht__navigation">
+    <div class="overzicht__button--container">
+      <a href="/service-aanmelden" class="overzicht__button">Zelf iets plaatsen...</a>
+    </div>
+  
+    <div class="overzicht__search">
+      <form action="/search" method="POST">
+        <input type="text" name="searchQuery" placeholder="Zoeken..." />
+        <button type="submit" class="overzicht__search--button">
+          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#202020"><path d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Z"/></svg>
+        </button>
+      </form>
+    </div>
   </div>
-
-  <form action="/search" method="POST" class="search-form">
-    <input type="text" name="searchQuery" placeholder="Search..." value="<%= searchQuery || '' %>">
-    <button type="submit">Search</button>
-  </form>
 
   <ul class="overzicht__container">
     <% // Sorteren van advertenties op oud naar nieuw (Hoogste ID tot laagste ID)
